# vitarit

./: Cargo.toml  README.md  vatarit_deposit.sol.txt  vatarit_deposit2.txt
adaptor/: Cargo.toml
adaptor/src/: ecdsa.rs  schnorr.rs
bitcoin-testnet/: .gitignore  Cargo.toml  README.md
bitcoin-testnet/benches/: tx_bench.rs
bitcoin-testnet/descriptors/: README.md
bitcoin-testnet/docs/: REQUIREMENTS.md  TRANSACTION_MAP.md
bitcoin-testnet/examples/: checklist.rs  simulate_fig7.rs  timings.rs
bitcoin-testnet/psbt/: .gitkeep
bitcoin-testnet/scripts/: 00_check_prereqs.sh  01_regtest_up.sh  02_regtest_down.sh  30_regtest_fig7_drill.sh  dry_run.sh
bitcoin-testnet/src/: checklist.rs  error.rs  keys.rs  ledger.rs  lib.rs  main.rs  network.rs  policy.rs  protocol.rs  signing.rs  transactions.rs
code/: Cargo.toml
code/benches/: lambda_s_sweep.rs  protocol_bench.rs
code/examples/: run_protocol.rs  timings.rs
code/src/: adaptor.rs  dvrf.rs  error.rs  gamma2pc.rs  hash.rs  lib.rs  nizk.rs  pkenc.rs  schnorr.rs  tx.rs  vitarit.rs  vne.rs  wire.rs
code/src/group/: bls.rs  mod.rs  ristretto.rs
crypto/: Cargo.toml
crypto/benches/: bls12381.rs  bls_multi_signature.rs  bls_signature.rs  ed25519.rs  sha256.rs
crypto/src/: bls12381_serde.rs  bls_signature.rs  chunked_elgamal.rs  hash_to_point.rs  lib.rs  nidkg_dealing.rs  nidkg_zk_chunk.rs  nidkg_zk_share.rs  polynomial.rs  threshold_signature.rs
integration/: Cargo.toml  README.md
integration/examples/: local_testnet_session.rs
integration/src/: error.rs  lib.rs  session.rs
scripts/: run_benchmarks.sh  run_local_session.sh
src/: enc.rs  encjson.rs  main.rs  pke.rs  pke_.bls.rs  pkejson.rs  vfenc.rs
