[package]
name = "rust_encryption_project"
version = "0.1.0"
edition = "2018"

[dependencies]
curve25519-dalek = "4.1.3"
sha2 = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand_core = "0.6"
bls12_381 = "0.8.0"
serde_json = "1.0"
hex = "0.4"




[[bin]]
name = "rust_encryption_project"
path = "src/main.rs"


[[bin]]
name = "enc"
path = "src/enc.rs"

[[bin]]
name = "encjson"
path = "src/encjson.rs"

[[bin]]
name = "encjson2"
path = "src/encjson2.rs"

[[bin]]
name = "pkejson"
path = "src/pkejson.rs"

[[bin]]
name = "pke"
path = "src/pke.rs"

# [[bin]]
# name = "vfenc"
# path = "src/vfenc.rs"